[package]
name = "stm32-rmk"
version = "0.1.0"
edition = "2021"

[dependencies]
rmk = { path = "../rmk/rmk" }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32/", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync/", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor/", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", path = "../embassy/embassy-time/", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.2.0", path = "../embassy/embassy-usb/", features = ["defmt" ] }
embassy-net = { version = "0.4.0", path = "../embassy/embassy-net/", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures/" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
analog-multiplexer = "1.0.2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'
test = false
bench = false


[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
strip = "symbols"
